# vigir_perception

./: CMakeLists.txt  package.xml
include/vigir_point_cloud_proc/: cloud_to_mesh.h  depth_image_to_mesh_ros.h  mesh_conversions.h  octomap_to_mesh_ros.h
launch/: multisense_depth_image.launch  multisense_depth_image_transformed_throttled.launch  vigir_worldmodel.launch  vigir_worldmodel_unfiltered_cloud_meshing.launch
src/: depth_image_to_mesh_node.cpp  octomap_to_mesh_node.cpp
